SignupActivity 이벤트 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Activity.Activity.MainActivity"/>
+        <activity android:name=".Activity.Activity.SignupActivity"/>
     </application>
 
 </manifest>
