--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,15 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".Activity.Activity.LoginActivity">
+        <activity android:name="com.gram.pictory.Activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.Activity.MainActivity"/>
-        <activity android:name=".Activity.Activity.SignupActivity"/>
+        <activity android:name="com.gram.pictory.Activity.MainActivity"/>
+        <activity android:name="com.gram.pictory.Activity.SignUpActivity"/>
     </application>
 
 </manifest>
