--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.gram.pictory">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -9,15 +11,18 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name="com.gram.pictory.Activity.LoginActivity">
+        <activity android:name=".Activity.PostNextActivity">
+
+        </activity>
+        <activity android:name=".Activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.gram.pictory.Activity.MainActivity"/>
-        <activity android:name="com.gram.pictory.Activity.SignUpActivity"/>
+        <activity android:name=".Activity.MainActivity"/>
+        <activity android:name=".Activity.SignUpActivity"/>
     </application>
 
 </manifest>
