--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         </activity>
         <activity android:name=".Activity.MainActivity"/>
         <activity android:name=".Activity.SignUpActivity"/>
+        <activity android:name=".Activity.ProfileEditActivity"/>
+        <activity android:name=".Activity.FollowerActivity"/>
     </application>
 
 </manifest>
